--- a/src/ui/fxml/create-client-vehicle.fxml
+++ b/src/ui/fxml/create-client-vehicle.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="843.0" prefWidth="584.0" style="-fx-background-radius: 0;" styleClass="background" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="764.0" prefWidth="584.0" style="-fx-background-radius: 0;" styleClass="background" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -24,19 +24,20 @@
                   <HBox alignment="CENTER" prefHeight="62.0" prefWidth="564.0" spacing="10.0">
                      <children>
                         <Label text="Nombre Completo:" />
-                        <TextField prefHeight="37.0" prefWidth="152.0" />
+                        <TextField fx:id="newClientFullnameTF" prefHeight="37.0" prefWidth="198.0" promptText="(Nombres, Apellidos)" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="62.0" prefWidth="564.0" spacing="10.0">
                      <children>
                         <Label text="Número Telefónico:" />
-                        <TextField prefHeight="37.0" prefWidth="152.0" />
+                        <TextField fx:id="newClientPhoneTF" prefHeight="37.0" prefWidth="152.0" promptText="312 4567890" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="62.0" prefWidth="564.0" spacing="10.0">
                      <children>
                         <Label text="Número de Identificación" />
-                        <TextField prefHeight="37.0" prefWidth="152.0" />
+                        <TextField fx:id="newClientIDTF" prefHeight="37.0" prefWidth="152.0" promptText="1234567890" />
+                        <ChoiceBox fx:id="newClientDocumentTypeCHB" prefHeight="37.0" prefWidth="58.0" stylesheets="@../css/choicebox-dark.css" />
                      </children>
                   </HBox>
                   <Separator minHeight="0.0" minWidth="0.0" prefHeight="16.0" prefWidth="167.0">
@@ -49,44 +50,39 @@
                   <HBox alignment="CENTER" prefHeight="62.0" prefWidth="564.0" spacing="10.0">
                      <children>
                         <Label text="Tipo de Vehículo:" />
-                        <ChoiceBox prefWidth="150.0" stylesheets="@../css/choicebox-dark.css" />
+                        <ChoiceBox fx:id="newVehicleTypeCHB" prefWidth="150.0" stylesheets="@../css/choicebox-dark.css" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="62.0" prefWidth="564.0" spacing="10.0">
                      <children>
                         <Label text="Tiempo de Estadía:" />
-                        <TextField prefHeight="37.0" prefWidth="41.0" />
-                        <ChoiceBox prefHeight="37.0" prefWidth="118.0" stylesheets="@../css/choicebox-dark.css" />
+                        <TextField fx:id="newVehicleNumberDaysTF" prefHeight="37.0" prefWidth="41.0" promptText="#" />
+                        <ChoiceBox fx:id="newVehicleStayTypeCHB" prefHeight="37.0" prefWidth="118.0" stylesheets="@../css/choicebox-dark.css" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="62.0" prefWidth="564.0" spacing="10.0">
                      <children>
                         <Label text="Placa:" />
-                        <TextField prefHeight="37.0" prefWidth="100.0" />
+                        <TextField fx:id="newVehiclePlatesTF" prefHeight="37.0" prefWidth="100.0" promptText="AAA000" />
                         <Separator opacity="0.0" prefHeight="14.0" prefWidth="43.0" />
                         <Label text="Modelo:" />
-                        <TextField prefHeight="37.0" prefWidth="139.0" />
+                        <TextField fx:id="newVehicleModelTF" prefHeight="37.0" prefWidth="150.0" promptText="(Marca, Modelo)" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="62.0" prefWidth="564.0" spacing="10.0">
                      <children>
                         <Label text="Color:" />
-                        <ChoiceBox prefHeight="37.0" prefWidth="132.0" stylesheets="@../css/choicebox-dark.css" />
-                        <Label text="Propietario:" />
-                        <Button mnemonicParsing="false" text="Añadir" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" prefHeight="62.0" prefWidth="564.0" spacing="10.0">
-                     <children>
+                        <ChoiceBox fx:id="newVehicleColorCHB" prefHeight="37.0" prefWidth="132.0" stylesheets="@../css/choicebox-dark.css" />
+                        <Separator opacity="0.0" prefHeight="14.0" prefWidth="43.0" />
                         <Label text="Puesto:" />
-                        <ChoiceBox prefHeight="37.0" prefWidth="76.0" stylesheets="@../css/choicebox-dark.css" />
+                        <ChoiceBox fx:id="newVehicleSeatCHB" prefHeight="37.0" prefWidth="76.0" stylesheets="@../css/choicebox-dark.css" />
                      </children>
                   </HBox>
                   <Separator opacity="0.0" orientation="VERTICAL" prefHeight="91.0" prefWidth="6.0" />
                   <HBox alignment="CENTER" prefHeight="51.0" prefWidth="564.0" spacing="10.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Crear" />
-                        <Button mnemonicParsing="false" text="Cancelar" />
+                        <Button mnemonicParsing="false" onAction="#createNewClient" text="Crear" />
+                        <Button mnemonicParsing="false" onAction="#cancelCreateNewClient" text="Cancelar" />
                      </children>
                   </HBox>
                </children>
