--- a/src/ui/fxml/splash-screen.fxml
+++ b/src/ui/fxml/splash-screen.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="splashPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="538.0" prefWidth="719.0" styleClass="preloader" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="splashPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="538.0" prefWidth="719.0" styleClass="preloader" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.PreloaderGUI">
    <left>
       <Label id="preloader-lbl" fx:id="progress" text="Cargando..." BorderPane.alignment="BOTTOM_CENTER">
          <BorderPane.margin>
