Map iteration 1 (back at where we were yay)

--- a/src/ui/css/databases.css
+++ b/src/ui/css/databases.css
@@ -18,7 +18,7 @@
 }
 
 .table-view .column-header .label {
-    -fx-text-fill: -TEXT-ICON;
+    -fx-text-fill: -TEXT-ICONS;
     -fx-font-weight: bold;
     -fx-background-color: transparent;
 }
