--- a/src/ui/fxml/main-view.fxml
+++ b/src/ui/fxml/main-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
@@ -34,6 +35,9 @@
       </VBox>
    </left>
    <center>
-      <BorderPane fx:id="currentScene" maxWidth="1.7976931348623157E308" minHeight="782.0" minWidth="0.0" prefHeight="782.0" styleClass="current-scene" BorderPane.alignment="CENTER" />
+      <BorderPane fx:id="currentScene" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="782.0" minWidth="0.0" prefHeight="782.0" styleClass="current-scene" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin></BorderPane>
    </center>
 </BorderPane>
