--- a/src/ui/fxml/splash-screen.fxml
+++ b/src/ui/fxml/splash-screen.fxml
@@ -3,12 +3,22 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Rectangle?>
 
-<BorderPane fx:id="splashPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="538.0" prefWidth="719.0" styleClass="preloader" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.PreloaderGUI">
+<BorderPane fx:id="splashPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="538.0" prefWidth="720.0" styleClass="preloader" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.PreloaderGUI">
    <left>
-      <Label id="preloader-lbl" fx:id="progress" text="Cargando..." BorderPane.alignment="BOTTOM_CENTER">
+      <Label id="preloader-lbl" fx:id="progressLBL" text="Cargando..." BorderPane.alignment="BOTTOM_CENTER">
          <BorderPane.margin>
             <Insets bottom="120.0" left="90.0" />
          </BorderPane.margin></Label>
    </left>
+   <bottom>
+      <Pane prefHeight="20.0" prefWidth="720.0">
+         <children>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="10.0" layoutX="3.0" layoutY="5.0" stroke="BLACK" strokeType="INSIDE" width="697.0" />
+            <Rectangle fx:id="pBarRCT" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="8.0" layoutX="3.0" layoutY="6.0" stroke="BLACK" strokeType="INSIDE" />
+         </children>
+      </Pane>
+   </bottom>
 </BorderPane>
