--- a/src/ui/fxml/main-view.fxml
+++ b/src/ui/fxml/main-view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="mainPane" prefWidth="352.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="mainPane" prefWidth="352.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <VBox alignment="CENTER" prefHeight="800.0" prefWidth="352.0" spacing="10.0" styleClass="vbox" BorderPane.alignment="CENTER">
          <children>
@@ -20,17 +20,17 @@
             </ImageView>
             <Label styleClass="app-title" text="La Ceiba" />
             <Label styleClass="subtitle" text="Lavadero y Parqueadero" />
-            <Button mnemonicParsing="false" onAction="#loginClicked" text="Iniciar sesión" />
+            <Button fx:id="mgLoginButton" mnemonicParsing="false" onAction="#loginClicked" text="Iniciar sesión" />
             <Separator opacity="0.0" orientation="VERTICAL" prefHeight="22.0" prefWidth="5.0" />
-            <Button mnemonicParsing="false" onAction="#clientsClicked" text="Clientes" />
-            <Button mnemonicParsing="false" onAction="#vehiclesClicked" text="Vehículos" />
-            <Button mnemonicParsing="false" onAction="#mapClicked" text="Mapa" />
+            <Button fx:id="mgClientsButton" mnemonicParsing="false" onAction="#clientsClicked" text="Clientes" />
+            <Button fx:id="mgVehiclesButton" mnemonicParsing="false" onAction="#vehiclesClicked" text="Vehículos" />
+            <Button fx:id="mgMapButton" mnemonicParsing="false" onAction="#mapClicked" text="Mapa" />
             <Separator opacity="0.0" orientation="VERTICAL" prefHeight="47.0" prefWidth="8.0" />
-            <Button mnemonicParsing="false" onAction="#usersClicked" text="Usuarios" />
-            <Button mnemonicParsing="false" onAction="#receiptsClicked" text="Facturación" />
-            <Button mnemonicParsing="false" onAction="#reportsClicked" text="Reportes" />
+            <Button fx:id="mgUsersButton" mnemonicParsing="false" onAction="#usersClicked" text="Usuarios" />
+            <Button fx:id="mgFacturationButton" mnemonicParsing="false" onAction="#receiptsClicked" text="Facturación" />
+            <Button fx:id="mgReportsButton" mnemonicParsing="false" onAction="#reportsClicked" text="Reportes" />
             <Separator opacity="0.0" orientation="VERTICAL" prefHeight="22.0" prefWidth="5.0" />
-            <Button mnemonicParsing="false" onAction="#exitClicked" text="Salir" />
+            <Button fx:id="mgExitButton" mnemonicParsing="false" onAction="#exitClicked" text="Salir" />
          </children>
       </VBox>
    </left>
