--- a/src/ui/fxml/splash-screen.fxml
+++ b/src/ui/fxml/splash-screen.fxml
@@ -16,8 +16,8 @@
    <bottom>
       <Pane prefHeight="20.0" prefWidth="720.0">
          <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="10.0" layoutX="3.0" layoutY="5.0" stroke="BLACK" strokeType="INSIDE" width="697.0" />
-            <Rectangle fx:id="pBarRCT" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="8.0" layoutX="3.0" layoutY="6.0" stroke="BLACK" strokeType="INSIDE" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="10.0" layoutX="3.0" layoutY="5.0" stroke="BLACK" strokeType="INSIDE" styleClass="p-bar" width="697.0" />
+            <Rectangle fx:id="pBarRCT" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="8.0" layoutX="3.0" layoutY="6.0" stroke="BLACK" strokeType="INSIDE" styleClass="p-bar-track" />
          </children>
       </Pane>
    </bottom>
