--- a/src/ui/fxml/vehicles-view.fxml
+++ b/src/ui/fxml/vehicles-view.fxml
@@ -3,6 +3,8 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -26,8 +28,11 @@
    <right>
       <VBox alignment="CENTER" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="background" BorderPane.alignment="CENTER">
          <children>
+            <CheckBox mnemonicParsing="false" stylesheets="@../css/receipts.css" text="Pene" />
+            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="139.0" prefWidth="5.0" />
             <Button fx:id="vehicleEditBTN" minWidth="0.0" mnemonicParsing="false" onAction="#editVehicle" text="Editar" />
             <Button fx:id="vehicleDeleteBTN" minWidth="0.0" mnemonicParsing="false" onAction="#deleteVehicle" text="Borrar" />
+            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="139.0" prefWidth="5.0" />
          </children>
          <BorderPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
