--- a/src/ui/fxml/clients-view.fxml
+++ b/src/ui/fxml/clients-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="0.0" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="0.0" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <TableView fx:id="clientsTBV" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
@@ -28,6 +28,7 @@
             <Button minWidth="0.0" mnemonicParsing="false" onAction="#addClient" text="Añadir" />
             <Button fx:id="clientDeleteBTN" minWidth="0.0" mnemonicParsing="false" onAction="#deleteClient" text="Deshabilitar" />
             <Button fx:id="clientEditBTN" minWidth="0.0" mnemonicParsing="false" onAction="#editClient" text="Editar" />
+            <Button fx:id="clientSearchBTN" minWidth="0.0" mnemonicParsing="false" onAction="#searchClient" text="Buscar" />
          </children>
          <BorderPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
