--- a/src/ui/fxml/main-view.fxml
+++ b/src/ui/fxml/main-view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="mainPane" prefWidth="352.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="mainPane" prefWidth="352.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <VBox alignment="CENTER" prefHeight="800.0" prefWidth="352.0" spacing="10.0" styleClass="vbox" BorderPane.alignment="CENTER">
          <children>
@@ -27,7 +27,7 @@
             <Button fx:id="mgMapButton" mnemonicParsing="false" onAction="#mapClicked" text="Mapa" />
             <Separator opacity="0.0" orientation="VERTICAL" prefHeight="47.0" prefWidth="8.0" />
             <Button fx:id="mgUsersButton" mnemonicParsing="false" onAction="#usersClicked" text="Usuarios" />
-            <Button fx:id="mgFacturationButton" mnemonicParsing="false" onAction="#receiptsClicked" text="Facturación" />
+            <Button fx:id="mgReceiptButton" mnemonicParsing="false" onAction="#receiptsClicked" text="Facturación" />
             <Button fx:id="mgReportsButton" mnemonicParsing="false" onAction="#reportsClicked" text="Reportes" />
             <Separator opacity="0.0" orientation="VERTICAL" prefHeight="22.0" prefWidth="5.0" />
             <Button fx:id="mgExitButton" mnemonicParsing="false" onAction="#exitClicked" text="Salir" />
