--- a/src/ui/fxml/clients-view.fxml
+++ b/src/ui/fxml/clients-view.fxml
@@ -3,8 +3,10 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -23,11 +25,13 @@
       </TableView>
    </center>
    <right>
-      <VBox alignment="CENTER" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="background" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" focusTraversable="true" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="background" BorderPane.alignment="CENTER">
          <children>
             <Button minWidth="0.0" mnemonicParsing="false" onAction="#addClient" text="Añadir" />
             <Button fx:id="clientDeleteBTN" minWidth="0.0" mnemonicParsing="false" onAction="#deleteClient" text="Deshabilitar" />
             <Button fx:id="clientEditBTN" minWidth="0.0" mnemonicParsing="false" onAction="#editClient" text="Editar" />
+            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="24.0" prefWidth="1.0" />
+            <TextField fx:id="clientSearchTXT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="37.0" prefWidth="162.0" />
             <Button fx:id="clientSearchBTN" minWidth="0.0" mnemonicParsing="false" onAction="#searchClient" text="Buscar" />
          </children>
          <BorderPane.margin>
