--- a/src/ui/fxml/user-view.fxml
+++ b/src/ui/fxml/user-view.fxml
@@ -3,8 +3,10 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -24,9 +26,13 @@
    <right>
       <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="background" BorderPane.alignment="CENTER">
          <children>
+            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="80.0" prefWidth="0.0" />
             <Button minWidth="0.0" mnemonicParsing="false" onAction="#addUser" text="Añadir" />
             <Button fx:id="userDeleteBTN" minWidth="0.0" mnemonicParsing="false" onAction="#deleteUser" text="Borrar" />
             <Button fx:id="userEditBTN" minWidth="0.0" mnemonicParsing="false" onAction="#editUser" text="Editar" />
+            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="38.0" prefWidth="0.0" />
+            <TextField fx:id="searchUserTXT" maxWidth="-Infinity" prefHeight="37.0" prefWidth="179.0" />
+            <Button fx:id="userSearchBTN" minWidth="0.0" mnemonicParsing="false" onAction="#SearchUser" text="Buscar" />
          </children>
          <BorderPane.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
