--- a/src/ui/fxml/main-view.fxml
+++ b/src/ui/fxml/main-view.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="mainPane" prefWidth="352.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="mainPane" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="736.0" prefWidth="355.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <left>
-      <VBox alignment="CENTER" prefHeight="800.0" prefWidth="352.0" spacing="10.0" styleClass="vbox" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" prefHeight="726.0" prefWidth="355.0" spacing="10.0" styleClass="vbox" BorderPane.alignment="CENTER">
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" onMouseClicked="#carClicked" pickOnBounds="true" preserveRatio="true">
                <image>
