--- a/src/ui/fxml/perHODVehicle-view.fxml
+++ b/src/ui/fxml/perHODVehicle-view.fxml
@@ -14,11 +14,11 @@
    <center>
       <TableView fx:id="perHODVehiclesTBV" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn fx:id="perHODVehicleTypeCOL" prefWidth="75.0" text="Tipo" />
-            <TableColumn fx:id="perHODVehiclePlateCOL" prefWidth="75.0" text="Placa" />
-          <TableColumn fx:id="perHODVehicleEntryCOL" prefWidth="75.0" text="Hora de entrada" />
-            <TableColumn fx:id="perHODVehicleExitCOL" prefWidth="75.0" text="Hora de salida" />
-            <TableColumn fx:id="perHODVehicleAmountToPayCOL" prefWidth="75.0" text="Valor a pagar" />
+          <TableColumn fx:id="perHODVehicleTypeCOL" maxWidth="2500.0" prefWidth="89.0" text="Tipo" />
+            <TableColumn fx:id="perHODVehiclePlateCOL" maxWidth="2500.0" prefWidth="89.0" text="Placa" />
+          <TableColumn fx:id="perHODVehicleEntryCOL" maxWidth="4700.0" prefWidth="162.0" text="Hora de entrada" />
+            <TableColumn fx:id="perHODVehicleExitCOL" maxWidth="4700.0" minWidth="0.0" prefWidth="125.0" text="Hora de salida" />
+            <TableColumn fx:id="perHODVehiclePayCOL" maxWidth="2500.0" prefWidth="89.0" text="Pago" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
