--- a/src/ui/fxml/user-view.fxml
+++ b/src/ui/fxml/user-view.fxml
@@ -10,13 +10,14 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="553.0" prefWidth="933.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <TableView fx:id="usersTBV" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="userNameCOL" prefWidth="75.0" text="Nombre" />
             <TableColumn fx:id="userUsernameCOL" prefWidth="75.0" text="Usuario" />
           <TableColumn fx:id="userIDCOL" prefWidth="75.0" text="Identificación" />
+            <TableColumn fx:id="userEnabledCOL" prefWidth="75.0" text="Habilitado" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
