--- a/src/ui/fxml/perHODVehicle-view.fxml
+++ b/src/ui/fxml/perHODVehicle-view.fxml
@@ -16,6 +16,7 @@
             <TableColumn fx:id="perHODVehiclePlateCOL" maxWidth="2500.0" prefWidth="89.0" text="Placa" />
           <TableColumn fx:id="perHODVehicleEntryCOL" maxWidth="4700.0" prefWidth="162.0" text="Hora de entrada" />
             <TableColumn fx:id="perHODVehicleExitCOL" maxWidth="4700.0" minWidth="0.0" prefWidth="125.0" text="Hora de salida" />
+            <TableColumn fx:id="perHODVehiclePayCOL" maxWidth="2500.0" prefWidth="89.0" text="Pago" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
