--- a/src/ui/fxml/parking-slot.fxml
+++ b/src/ui/fxml/parking-slot.fxml
@@ -9,7 +9,7 @@
    <center>
       <VBox fx:id="slotBDP" alignment="CENTER" onContextMenuRequested="#showSlotInformation" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="slotNumberLBL" alignment="CENTER" prefHeight="28.0" prefWidth="28.0" styleClass="slot" text="N" textAlignment="CENTER" />
+            <Label fx:id="slotNumberLBL" alignment="CENTER" prefHeight="28.0" styleClass="slot" text="N" textAlignment="CENTER" />
             <Rectangle fx:id="vehicleRCT" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" stroke="BLACK" strokeType="INSIDE" width="25.0" />
          </children>
       </VBox>
