--- a/src/ui/fxml/parking-slot.fxml
+++ b/src/ui/fxml/parking-slot.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 
 <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="100.0" styleClass="parking-slot" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
@@ -11,6 +12,7 @@
          <children>
             <Label fx:id="slotNumberLBL" alignment="CENTER" prefHeight="28.0" styleClass="slot" text="N" textAlignment="CENTER" />
             <Rectangle fx:id="vehicleRCT" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Circle fx:id="bikeCRC" fill="DODGERBLUE" stroke="BLACK" strokeType="INSIDE" />
          </children>
       </VBox>
    </center>
