--- a/src/ui/fxml/vehicles-view.fxml
+++ b/src/ui/fxml/vehicles-view.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -30,10 +31,13 @@
    <right>
       <VBox alignment="CENTER" minWidth="0.0" prefHeight="553.0" prefWidth="220.0" spacing="10.0" styleClass="background" BorderPane.alignment="CENTER">
          <children>
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="85.0" prefWidth="6.0" />
+            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="29.0" prefWidth="6.0" />
             <Button fx:id="vehicleEditBTN" minWidth="0.0" mnemonicParsing="false" onAction="#editVehicle" text="Editar" />
             <Button fx:id="vehicleDeleteBTN" minWidth="0.0" mnemonicParsing="false" onAction="#deleteVehicle" text="Borrar" />
-            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="5.0" />
+            <Separator layoutX="117.0" layoutY="339.0" opacity="0.0" orientation="VERTICAL" prefHeight="39.0" prefWidth="4.0" />
+            <TextField fx:id="searchVehicleTXT" maxWidth="-Infinity" prefHeight="37.0" prefWidth="181.0" />
+            <Button fx:id="vehicleSearchBTN" layoutX="56.0" layoutY="244.0" minWidth="0.0" mnemonicParsing="false" onAction="#SearchVehicle" text="Buscar" />
+            <Separator opacity="0.0" orientation="VERTICAL" prefHeight="39.0" prefWidth="4.0" />
             <Label text="Vehiculos especificos" textFill="#fcfcfc" />
             <Button fx:id="monthlyVehicleStartBTN" minWidth="-Infinity" mnemonicParsing="false" onAction="#monthlyVehicleStart" prefHeight="37.0" prefWidth="191.0" text="Mensuales" />
             <Button fx:id="perHODVehicleStartBTN" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="200.0" mnemonicParsing="false" onAction="#perHODVehicleStart" prefHeight="41.0" prefWidth="175.0" text="Diarios o por horas" />
